# projectMCP

./: README.md  agno_client.py  agno_clinet.py  client.py  main.py  pyproject.toml  server.py
sse_server/: .env  LangChain_client.py  math_server_sse.py  pyproject.toml  requirements.txt  terminal_server_sse.py
